--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.6",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^7.3.0"
   },
@@ -20,5 +19,8 @@
     "sass-loader": "^7.1.0",
     "typescript": "^3.3.3",
     "vue-template-compiler": "^2.6.6"
+  },
+  "peerDependencies": {
+    "vue": "^2.6.9"
   }
 }
