--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
+    "material-design-icons-iconfont": "^4.0.5",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.3.3",
-    "vue-template-compiler": "^2.6.6"
+    "vue": "^2.6.9",
+    "vue-i18n": "^8.9.0",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.6.6",
+    "vuetify": "^2.0.0-alpha.9"
   },
   "peerDependencies": {
     "vue": "^2.6.9"
