--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "demo/**/*.ts",
+    "demo/**/*.tsx",
+    "demo/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
