--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "KnoYo <xuelongqy@foxmail.com>",
   "main": "easyrefresh.js",
   "homepage": "https://github.com/xuelongqy/vue-easyrefresh",
-  "keyword": "easyrefresh refresh pull push",
+  "keywords": ["easyrefresh", "refresh", "pull", "push"],
   "private": false,
   "repository": {
     "type": "git",
