--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vue-easyrefresh",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Vue component for pull-refresh and push-load.",
   "author": "KnoYo <xuelongqy@foxmail.com>",
   "main": "easyrefresh.js",
   "homepage": "https://github.com/xuelongqy/vue-easyrefresh",
-  "keywords": ["easyrefresh", "refresh", "pull", "push"],
+  "keywords": ["easyrefresh", "refresh", "pull", "push", "scroll"],
   "private": false,
   "repository": {
     "type": "git",
