--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "vue-i18n": "^8.9.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.6.10",
-    "vuetify": "^2.0.0-alpha.16"
+    "vuetify": "^2.0.4"
   },
   "peerDependencies": {
     "vue": "^2.6.10"
